--- a/Consulting Plus/assets/css/style.css
+++ b/Consulting Plus/assets/css/style.css
@@ -15,9 +15,10 @@ body {
   color: #000; }
 
 .container {
-  max-width: 1270px;
+  max-width: 1170px;
   padding: 0 10px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  width: 100%; }
 
 a {
   text-decoration: none;
@@ -296,7 +297,7 @@ header {
         transform: rotate(-45deg) translate(2px, -5px); }
 
 main section#main {
-  background: url(../images/background/background-main.png) no-repeat center top/cover;
+  background: url(/assets/images/background/background-main.png) no-repeat center top/cover;
   min-height: 90vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -310,7 +311,7 @@ main section#main {
   text-align: center; }
   @media (max-width: 576px) {
     main section#main {
-      background: url(../images/background/mobile-background-main.png) no-repeat center top/cover;
+      background: url(/assets/images/background/mobile-background-main.png) no-repeat center top/cover;
       min-height: 60vh; } }
   main section#main p,
   main section#main span {
@@ -377,7 +378,7 @@ main section#main {
             padding-top: 0px; } }
 
 main section#what-offer {
-  background: url(../images/background/background-what-offer.png) no-repeat center top/cover;
+  background: url(/assets/images/background/background-what-offer.png) no-repeat center top/cover;
   min-height: 50vh;
   padding: 60px 0; }
   @media (max-width: 576px) {
@@ -419,19 +420,19 @@ main section#what-offer {
       display: flex;
       margin: 15px 0; }
       main section#what-offer ul li:before {
-        content: url(../images/eclipse-yellow.png);
+        content: url(/assets/images/eclipse-yellow.png);
         display: block;
         margin: 0 15px 0 0; }
         @media (max-width: 576px) {
           main section#what-offer ul li:before {
-            content: url(../images/eclipse-yellow-small.png); } }
+            content: url(/assets/images/eclipse-yellow-small.png); } }
 
 main section#live-near-sea {
-  background: url(../images/background/background-live-near-sea.png) no-repeat center top/cover;
+  background: url(/assets/images/background/background-live-near-sea.png) no-repeat center top/cover;
   min-height: 90vh; }
   @media (max-width: 576px) {
     main section#live-near-sea {
-      background: url(../images/background/mobile-background-live-near-sea.png) no-repeat center top/cover;
+      background: url(/assets/images/background/mobile-background-live-near-sea.png) no-repeat center top/cover;
       min-height: 50vh; } }
   main section#live-near-sea .container {
     display: -webkit-box;
@@ -443,7 +444,7 @@ main section#live-near-sea {
     padding: 100px 0; }
     @media (max-width: 576px) {
       main section#live-near-sea .container {
-        padding: 70% 0 10px 0; } }
+        padding: 240px 0 10px 0; } }
     main section#live-near-sea .container .sea-wrapper {
       max-width: 55%; }
       @media (max-width: 576px) {
@@ -485,16 +486,16 @@ main section#live-near-sea {
             main section#live-near-sea .container .sea-wrapper ul li:last-child {
               margin: 0 0 15px 0; } }
         main section#live-near-sea .container .sea-wrapper ul li:before {
-          content: url(../images/eclipse-yellow.png);
+          content: url(/assets/images/eclipse-yellow.png);
           display: block;
           margin: 0 15px 0 0; }
           @media (max-width: 576px) {
             main section#live-near-sea .container .sea-wrapper ul li:before {
-              content: url(../images/eclipse-yellow-small.png);
+              content: url(/assets/images/eclipse-yellow-small.png);
               margin: 0 5px 0 0; } }
 
 main section#presentation-plan {
-  background: url(../images/background/background-presentation-plan.png) no-repeat center top/cover;
+  background: url(/assets/images/background/background-presentation-plan.png) no-repeat center top/cover;
   min-height: 90vh; }
   @media (max-width: 576px) {
     main section#presentation-plan {
@@ -546,11 +547,11 @@ main section#presentation-plan {
           margin: 15px 0; } }
 
 main section#unique-offer {
-  background: url(../images/background/background-unique-offer.png) no-repeat center top/cover;
+  background: url(/assets/images/background/background-unique-offer.png) no-repeat center top/cover;
   min-height: 100vh; }
   @media (max-width: 576px) {
     main section#unique-offer {
-      background: url(../images/background/mobile-background-unique-offer.png) no-repeat center top/cover;
+      background: url(/assets/images/background/mobile-background-unique-offer.png) no-repeat center top/cover;
       min-height: 50vh; } }
   main section#unique-offer .container {
     display: -webkit-box;
@@ -583,14 +584,14 @@ main section#unique-offer {
         margin: 30px 0; }
 
 main section#promotional-tour {
-  background: url(../images/background/background-promotional-tour.png) no-repeat center top/cover;
+  background: url(/assets/images/background/background-promotional-tour.png) no-repeat center top/cover;
   min-height: 50vh;
   padding: 100px 0; }
   @media (max-width: 576px) {
     main section#promotional-tour {
-      background: url(../images/background/mobile-background-promotional-tour.png) no-repeat center top/cover;
+      background: url(/assets/images/background/mobile-background-promotional-tour.png) no-repeat center top/cover;
       min-height: 70vh;
-      padding: 70% 0 0 0; } }
+      padding: 250px 0 0 0; } }
   main section#promotional-tour p {
     max-width: 60%;
     font-size: 24px !important;
@@ -675,9 +676,9 @@ main section#presentation-speakers {
       main section#presentation-speakers .speaker-wrapper .speaker-item p {
         padding: 10px 0; }
   main section#presentation-speakers .slick-next:before {
-    content: url(../images/next-arrow.svg); }
+    content: url(/assets/images/next-arrow.svg); }
   main section#presentation-speakers .slick-prev:before {
-    content: url(../images/previus-arrow.svg); }
+    content: url(/assets/images/previus-arrow.svg); }
   main section#presentation-speakers .speaker-wrapper-desktop {
     display: none; }
     @media (min-width: 576px) {
@@ -694,11 +695,11 @@ main section#presentation-speakers {
         display: none; } }
 
 footer {
-  background: url(../images/background/background-footer.png) no-repeat center top/cover;
+  background: url(/assets/images/background/background-footer.png) no-repeat center top/cover;
   min-height: 30vh; }
   @media (max-width: 576px) {
     footer {
-      background: url(../images/background/mobile-background-footer.png) no-repeat center top/cover;
+      background: url(/assets/images/background/mobile-background-footer.png) no-repeat center top/cover;
       min-height: 20vh; } }
   footer .container {
     padding: 50px 0; }
