--- a/GS Agency/scss/_variables.scss
+++ b/GS Agency/scss/_variables.scss
@@ -30,10 +30,10 @@ $body-color: #000000;
 $white: #ffffff;
 // Theme color
 $primary: #FFFF36;
-$secondary: #1fb398;
+$secondary: #9999;
 $warning: #fec96b;
-$dark: #262e45;
-$light: #5D5D5D;
+$dark: #4444;
+$light: #4444;
 $blue: #478fff;
 
 // Navbar
