--- a/GS Agency/assets/css/style.css
+++ b/GS Agency/assets/css/style.css
@@ -153,7 +153,7 @@ a,
 
 hr.line {
   margin: 0;
-  border-color: #262e45;
+  border-color: #4444;
   border-width: 2px; }
 
 .input-lg-w {
@@ -883,24 +883,24 @@ hr.line {
 
 /* Gradients  */
 .solid-gredient-1 {
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #ffffff), color-stop(50%, #5D5D5D));
-  background-image: -webkit-linear-gradient(top, #ffffff 50%, #5D5D5D 50%);
-  background-image: -o-linear-gradient(top, #ffffff 50%, #5D5D5D 50%);
-  background-image: linear-gradient(to bottom, #ffffff 50%, #5D5D5D 50%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #ffffff), color-stop(50%, #4444));
+  background-image: -webkit-linear-gradient(top, #ffffff 50%, #4444 50%);
+  background-image: -o-linear-gradient(top, #ffffff 50%, #4444 50%);
+  background-image: linear-gradient(to bottom, #ffffff 50%, #4444 50%);
   background-repeat: repeat-x; }
 
 .solid-gredient-2 {
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #ffffff), color-stop(50%, #262e45));
-  background-image: -webkit-linear-gradient(top, #ffffff 50%, #262e45 50%);
-  background-image: -o-linear-gradient(top, #ffffff 50%, #262e45 50%);
-  background-image: linear-gradient(to bottom, #ffffff 50%, #262e45 50%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #ffffff), color-stop(50%, #4444));
+  background-image: -webkit-linear-gradient(top, #ffffff 50%, #4444 50%);
+  background-image: -o-linear-gradient(top, #ffffff 50%, #4444 50%);
+  background-image: linear-gradient(to bottom, #ffffff 50%, #4444 50%);
   background-repeat: repeat-x; }
 
 .solid-gredient-3 {
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #1fb398), color-stop(50%, #ffffff));
-  background-image: -webkit-linear-gradient(top, #1fb398 50%, #ffffff 50%);
-  background-image: -o-linear-gradient(top, #1fb398 50%, #ffffff 50%);
-  background-image: linear-gradient(to bottom, #1fb398 50%, #ffffff 50%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #9999), color-stop(50%, #ffffff));
+  background-image: -webkit-linear-gradient(top, #9999 50%, #ffffff 50%);
+  background-image: -o-linear-gradient(top, #9999 50%, #ffffff 50%);
+  background-image: linear-gradient(to bottom, #9999 50%, #ffffff 50%);
   background-repeat: repeat-x; }
 
 /* Befour & After */
@@ -965,7 +965,7 @@ hr.line {
 
 /* Badge*/
 .badge-dark {
-  background-color: #262e45; }
+  background-color: #4444; }
 
 .badge-primary {
   background-color: #FFFF36; }
@@ -1054,8 +1054,8 @@ button.btn {
   background-color: #ffffff;
   border-color: #ffffff; }
   .btn-light:hover {
-    background-color: #5D5D5D;
-    border-color: #5D5D5D; }
+    background-color: #4444;
+    border-color: #4444; }
 
 .btn-outline-light {
   border-color: #ffffff;
@@ -1085,7 +1085,7 @@ button.btn {
 .heading h2 {
   line-height: 4.4rem;
   font-size: 3.6rem;
-  color: #262e45;
+  color: #4444;
   font-weight: 400; }
 
 /* Slick Dots */
@@ -1504,7 +1504,7 @@ header .navbar {
   width: 30rem;
   height: .3rem;
   overflow: hidden;
-  background-color: #5D5D5D;
+  background-color: #4444;
   background-image: -webkit-gradient(linear, left top, right top, from(#FFFF36), to(#FFFF36));
   background-image: -webkit-linear-gradient(left, #FFFF36, #FFFF36);
   background-image: -o-linear-gradient(left, #FFFF36, #FFFF36);
@@ -1523,13 +1523,13 @@ header .navbar {
 .case-study.outline-style .single-case {
   margin: 0 0 3rem; }
   .case-study.outline-style .single-case .case-title {
-    border: 1px solid #5D5D5D;
+    border: 1px solid #4444;
     margin-top: -1px;
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out; }
   .case-study.outline-style .single-case:hover .case-title {
-    background-color: #5D5D5D; }
+    background-color: #4444; }
 
 /* Fun facts Part */
 .fun-facts .single-fact img {
@@ -1879,7 +1879,7 @@ header .navbar {
     line-height: 2.8rem; }
   .blog-details .comments-area .comment-boxs .media .media-body .item-link {
     padding-bottom: 3px;
-    border-bottom: 1px solid #262e45; }
+    border-bottom: 1px solid #4444; }
     .blog-details .comments-area .comment-boxs .media .media-body .item-link:hover {
       border-color: #FFFF36; }
   .blog-details .comments-area .comment-boxs .media .media-body .media {
@@ -1924,7 +1924,7 @@ header .navbar {
     .sidebar .widget .widget-title h4 {
       font-weight: 700;
       margin-top: -3px;
-      color: #262e45; }
+      color: #4444; }
     .sidebar .widget .widget-title hr {
       width: 5.5rem; }
     .sidebar .widget p {
@@ -2418,8 +2418,50 @@ header .topbar {
 .count-particles {
   display: none !important; }
 
+.bg-primary {
+  background-color: #000 !important; }
+
 .promo-box {
-  background: #000 !important; }
+  background-image: url(../img/bg/2.svg); }
+
+.btn-dark {
+  color: #000;
+  background-color: #ffff36;
+  border-color: #ffff36;
+  -webkit-box-shadow: 10px -15px 55px -45px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px -15px 55px -45px rgba(0, 0, 0, 0.75); }
+
+.bg-one {
+  background: url(../img/bg/one.svg) no-repeat top; }
+
+.bg-two {
+  background: url(../img/bg/two.svg) no-repeat top; }
+
+.bg-three {
+  background: url(../img/bg/three.svg) no-repeat top; }
+
+.btn-outline-light {
+  color: #000;
+  border: 1px solid #000; }
+
+.icon img {
+  max-width: 50%; }
+
+.hero-thumb img {
+  padding: 0 0 150px 0; }
+
+.bg-6 {
+  background-image: url(../img/bg/6.svg); }
+
+.single-plan {
+  padding-left: 0rem !important;
+  padding-right: 0rem !important;
+  background: #000 !important;
+  margin: 15px 0 !important; }
+  .single-plan .btn {
+    background-color: #ffff36 !important;
+    color: #000 !important;
+    border: 1px solid transparent; }
 
 /* ---- reset ---- */
 body {
@@ -2440,6 +2482,8 @@ canvas {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%; }
+  #particles-js canvas {
+    position: fixed; }
 
 /* ---- stats.js ---- */
 .count-particles {
@@ -2472,3 +2516,74 @@ canvas {
 
 .count-particles {
   border-radius: 0 0 3px 3px; }
+
+* {
+  cursor: none; }
+
+.cursor {
+  --size: 8px;
+  height: var(--size);
+  width: var(--size);
+  border-radius: 50%;
+  position: absolute;
+  z-index: 10000;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  border-radius: 50%;
+  -webkit-animation: shadow 1s infinite alternate;
+  animation: shadow 1s infinite alternate; }
+
+@-webkit-keyframes shadow {
+  from {
+    -webkit-box-shadow: 0 0 55px 10px #ffff36;
+    box-shadow: 0 0 55px 10px #ffff36; }
+  to {
+    -webkit-box-shadow: 0 0 90px 20px #ffff36;
+    box-shadow: 0 0 90px 20px #ffff36; } }
+
+@keyframes shadow {
+  from {
+    -webkit-box-shadow: 0 0 55px 10px #ffff36;
+    box-shadow: 0 0 55px 10px #ffff36; }
+  to {
+    -webkit-box-shadow: 0 0 90px 20px #ffff36;
+    box-shadow: 0 0 90px 20px #ffff36; } }
+
+.cursor.cursor-shadow {
+  background-color: transparent;
+  border: 1px solid #000;
+  --size: 40px;
+  -webkit-transition: top 0.2s, left 0.2s, width 0.2s, height 0.2s, background-color 0.2s, border-color 0.2s;
+  -o-transition: top 0.2s, left 0.2s, width 0.2s, height 0.2s, background-color 0.2s, border-color 0.2s;
+  transition: top 0.2s, left 0.2s, width 0.2s, height 0.2s, background-color 0.2s, border-color 0.2s;
+  -webkit-transition-timing-function: ease-out;
+  -o-transition-timing-function: ease-out;
+  transition-timing-function: ease-out; }
+
+.cursor.cursor-dot {
+  background: #000;
+  -webkit-transition: width 0.2s, height 0.2s;
+  -o-transition: width 0.2s, height 0.2s;
+  transition: width 0.2s, height 0.2s; }
+
+.cursor-shadow.active {
+  --size: 80px;
+  border-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0.1); }
+
+.cursor-dot.active {
+  --size: 0; }
+
+body::-webkit-scrollbar {
+  width: 1em; }
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0); }
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid transparent;
+  border-radius: 5px; }
