--- a/c-punks/scss/style.scss
+++ b/c-punks/scss/style.scss
@@ -232,9 +232,9 @@ footer {
       padding: 30px 0;
     }
 
-    .gallarey-image {
-      width: 75%;
-    }
+    // .gallarey-image {
+    //   width: 75%;
+    // }
 
     p {
       font-size: 54px;
@@ -291,6 +291,11 @@ footer {
       &:hover {
         border-bottom: 1px solid #fff;
       }
+    }
+
+    .gallarey-wrapper {
+      display: flex;
+      justify-content: center;
     }
 
     &-line {
